update readme file

--- a/README
+++ b/README
@@ -1,1 +1,24 @@
-This is the directory of the MEDS project. More to be added.
+Medical Equipment Detection System
+============================
+This Kinect project is to detect if an entering person wears specific medical equipments or not by color detection.
+
+Hardware Requirement
+=================  
+• A Kinect (first generation)  
+• A computer with USB 3.0 host controllers installed
+
+Software Requirement
+=================  
+• Microsoft VIsual Studio 2012  
+• Microsoft Visual C++ 2010 Redistributable Package (x86)  
+• Microsoft Kinect SDK 1.8
+
+Setting
+=================
+Place the Kinect on a tripod and turn the Kinect to point to the entrance with a distance of 3~3.5 meters.
+
+Contact
+=================
+Feel free to contact me if you have any problems running the system through  
+Email: wqsa007gg@gmail.com  
+or Github account.
